--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>common</module>
         <module>ward</module>
+        <module>nurse</module>
     </modules>
     <packaging>pom</packaging>
 
