增加JWT认证修改 增加患者模块基本代码 增加同一异常处理

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>common</module>
         <module>ward</module>
         <module>nurse</module>
+        <module>patient</module>
     </modules>
     <packaging>pom</packaging>
 
