--- a/nurse/src/main/resources/application.yml
+++ b/nurse/src/main/resources/application.yml
@@ -15,3 +15,9 @@ jwt:
   config:
     key: zcmu
     ttl: 360000
+eureka:
+  client:
+    service-url:
+      defaultZone: http://127.0.0.1:6868/eureka/
+  instance:
+    prefer-ip-address: true
