--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>patient</module>
         <module>eureka</module>
         <module>web</module>
+        <module>order</module>
+        <module>sign</module>
     </modules>
     <packaging>pom</packaging>
 
