--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -20,6 +20,9 @@ zuul:
     his-patient:
       path: /patient/** #配置请求URL的请求规则
       serviceId: his-patient #指定Eureka注册中心中的服务id
+    his-order:
+      path: /order/** #配置请求URL的请求规则
+      serviceId: his-order #指定Eureka注册中心中的服务id
 jwt:
   config:
     key: zcmu
