--- a/sign/src/main/resources/application.yml
+++ b/sign/src/main/resources/application.yml
@@ -17,3 +17,7 @@ eureka:
       defaultZone: http://127.0.0.1:6868/eureka/
   instance:
     prefer-ip-address: true
+jwt:
+  config:
+    key: zcmu
+    ttl: 360000
