搭建护理模块基本代码块

--- a/web/src/main/resources/application.yml
+++ b/web/src/main/resources/application.yml
@@ -26,6 +26,9 @@ zuul:
     his-sign:
       path: /sign/** #配置请求URL的请求规则
       serviceId: his-sign #指定Eureka注册中心中的服务id
+    his-careplan:
+      path: /careplan/** #配置请求URL的请求规则
+      serviceId: his-careplan #指定Eureka注册中心中的服务id
 jwt:
   config:
     key: zcmu
