--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>web</module>
         <module>order</module>
         <module>sign</module>
+        <module>careplan</module>
     </modules>
     <packaging>pom</packaging>
 
